# proc-macro-dev-test-guide

./: .gitignore  Cargo.toml
cargo_src_query/: Cargo.toml
cargo_src_query/integration_test_crate/: Cargo.toml
cargo_src_query/integration_test_crate/src/: lib.rs
cargo_src_query/integration_test_crate/src/nested_directory/: another_file.rs  mod.rs
cargo_src_query/src/: core.rs  errors.rs  flags.rs  lib.rs  logger.rs  macros.rs
cargo_src_query/src/bench/: mod.rs
cargo_src_query/src/helpers/: display.rs  mod.rs  module_path.rs
cargo_src_query/src/helpers/test/: assert_tokens_eq.rs  common.rs  initialize.rs  mock_file.rs  mod.rs
cargo_src_query/src/impl/: external.rs  find_dependencies.rs  find_mod.rs  mod.rs  recurse_export.rs
cargo_src_query/tests/: contracts.rs  find_module.rs
derive/: Cargo.toml  build.rs
derive/src/: boop.json  lib.rs
derive/tests/: attr_integration_tests.rs
macro-core/: Cargo.toml  build.rs
macro-core/src/: helpers.rs  lib.rs
macro-core/src/macro_types/: mod.rs  proc_macro_read_build_file.rs
macro-core/src/macro_types/custom_syntax/: clone_def_syntax.rs  custom_syntax_macro.rs  helpers.rs  mod.rs
macro-core/src/macro_types/proc_macro_attribute/: macro_attr_no_args.rs  macro_attr_with_args.rs  mod.rs
macro-core/src/macro_types/syntax_highlighting/: mod.rs
macro-core/tests/: attr_macro_test.rs
proc_macro_state/: Cargo.toml
proc_macro_state/src/: lib.rs
proc_macro_state/src/examples/: mod.rs  process_block.rs
rust-analyzer-test/: Cargo.toml
rust-analyzer-test/src/: lib.rs
src/: lib.rs
