[package]
name = "proc_macro_dev_test_guide"
version = "0.0.0"
authors = ["zb3qk <zb3qk@virginia.edu>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
serde = { version = "1.0", features = ["derive"] }
