[package]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
macro-core = { path = "../macro-core" }
proc-macro2 = "1.0.24"
syn = { version = "1.0.60", features = ["extra-traits", "full", "fold"] }
