[package]
name = "proc_macro_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.60", features = ["extra-traits", "full", "fold", "parsing"] }
proc-macro2 = "1.0.24"
quote = "1"
proc-macro-error = "1.0.4"
derive_builder = "0.12.0"
lazy_static = "1.4.0"